--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,10 @@ services:
     network_mode: host
     tty: true
     volumes:
-      - ${HOME}/Documents/Projects/k8s/root:/root
-      - ${HOME}/Documents/Projects/k8s/repo:/source
-      - ${HOME}/Documents/Projects/k8s/private:/private
-      - ${HOME}/.kube/config:/root/.kube/config
-      # change desired paths below
-      #- /home/geising/az/root:/root
-      #- /home/geising/ING/terraforming:/data
+      - ${HOME}/Documents/hackaton/root:/root
+      - ${HOME}/Documents/hackaton/repo:/source
+      - ${HOME}/Documents/hackaton/private:/private
+      - ${HOME}/.kube/:/root/.kube/
     #environment:
       # - ${TF_VAR_store_acr_name}
       # - ${TF_VAR_store_acr_password}
